/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-03-14 15:30 UTC+0100 Wilfried Brunken DF7BE
  * samples/Readme.txt
  * samples/allhbp.hbp
  * samples/gtk_samples/dbview.hbp
  * samples/gtk_samples/progbars.prg
  * samples/gtk_samples/pseudocm.prg
  * samples/gtk_samples/testget2.prg
  * samples/gtk_samples/winprn.prg
  * utils/dbc/dbchw.hbp
  * utils/debugger/sample.hbp
  ! Ticket #77:
  ! Project "hbcontainer" for LINUX,
  ! only one util (DBC) must be fixed,
  ! the rest is OK.


2021-03-14 11:20 UTC+0100 Wilfried Brunken DF7BE
  * install.txt
  * contrib/hwg_misc.hbp (New)
  * contrib/hwmake/hwmake.hbp
  * contrib/hwreport/example.hbp (New)
  * contrib/hwreport/example.prg
  * contrib/hwreport/hwmingnw.bat (New)
  * contrib/hwreport/hwreport.hbp
  * samples/allhbp.hbp
  * samples/GetWinVers.hbp (New)
  * samples/Readme.txt
  * samples/Testado.hbp (New)
  * samples/TwoListbox.hbp (New)
  * samples/TwoListbox.prg
  * samples/TwoLstSub.hbp (New)
  * samples/TwoLstSub.prg
  * samples/a.hbp
  * samples/a.prg
  * samples/arraybrowse.hbp (New)
  * samples/arraybrowse.prg
  * samples/bincnts.hbp (New)
  * samples/buildpelles.hbp
  * samples/buildpelles.prg
  * samples/colrbloc.hbp (New)
  * samples/colrbloc.prg
  * samples/dbview.hbp
  * samples/dbview.prg
  * samples/demodbf.hbp (New)
  * samples/demodbf.prg
  * samples/demohlist.hbp (New)
  * samples/demohlistsub.hbp (New)
  * samples/fileselect.hbp (New)
  * samples/fileselect.prg
  * samples/getupdown.hbp (New)
  * samples/getupdown.prg
  * samples/graph.hbp (New)
  * samples/grid_1.hbp (New)
  * samples/grid_4.hbp (New)
  * samples/grid_5.hbp (New)
  * samples/grid_5.prg
  * samples/gtk_samples/dbview.prg
  * samples/hello.hbp (New)
  * samples/hello.prg
  * samples/helpstatic.hbp (New)
  * samples/helpstatic.prg
  * samples/hexbincnt.hbp (New)