@@ -8,6 +8,12 @@
    2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2021-03-15 09:41 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
+  * source/gtk/draw.c
+  * source/winapi/draw.c
+    * New function added, hwg_Arc( hDC, xc, yc, radius, iAngleStart, iAngleEnd )
+      to draw arc.
+
 2021-03-14 15:30 UTC+0100 Wilfried Brunken DF7BE
   * samples/Readme.txt
   * samples/allhbp.hbp
